--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,8 +11,10 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "bootstrap-vue": "^2.18.0",
     "vue": "^2.5.2",
+    "vue-google-signin-button-directive": "^1.0.3",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
