--- a/.gitignore
+++ b/.gitignore
@@ -250,3 +250,6 @@ fabric.properties
 
 # End of https://www.toptal.com/developers/gitignore/api/pycharm,flask
 /.idea/dataSources.xml
+
+.idea/
+test_data.db
