pipeline with travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,3 +10,10 @@ install:
 # command to run tests
 script:
   - python3 -m unittest discover -v backend
+# deploy
+deploy:
+  provider: heroku
+  api_key:
+    secure: 971389d2-e998-498d-aae7-13524bc96bbf
+  app:
+    main: grup-es
