--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ script:
   - python3 -m unittest discover -v backend
 # deploy
 before_deploy:
-  - npm install
+  - npm install --prefix frontend
   - npm run build --prefix frontend
   - build.sh
 
