--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ script:
 before_deploy:
   - npm install --prefix frontend
   - npm run build --prefix frontend
-  - build.sh
+  - bash build.sh
 
 deploy:
   provider: heroku
