--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,6 @@
 language: python
 python:
   - "3.6"      # current default Python on Travis CI
-  - "3.7"
-  - "3.8"
-  - "3.8-dev"  # 3.8 development branch
 # command to install dependencies
 install:
   - pip install -r deployment/requirements.txt
@@ -16,6 +13,7 @@ before_deploy:
   - npm run build --prefix frontend
   - bash build.sh
   - cd deployment
+  - git add .
 
 deploy:
   provider: heroku
