--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,8 @@ before_deploy:
   - bash build.sh
   - cd deployment
   - git add *
+  - git add .
+  - git commit -a
 
 deploy:
   provider: heroku
