--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,13 @@ python:
 - '3.6'
 install:
 - pip install -r deployment/requirements.txt
+- pip install pytest
+- pip install coverage
+- pip install coveralls
 script:
-- python3 -m unittest discover -v backend
+- coverage run -m unittest discover -v backend
+after_success:
+- coveralls
 before_deploy:
 - bash build.sh
 deploy:
