--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,7 @@ python:
 - '3.6'
 install:
 - pip install -r deployment/requirements.txt
-- pip install pytest
-- pip install coverage
-- pip install coveralls
+- pip install -r requirements_test.txt
 script:
 - coverage run -m unittest discover -v backend
 after_success:
